--- a/src/html/auth-signup.html
+++ b/src/html/auth-signup.html
@@ -29,7 +29,7 @@
 							<span class="input-group-text"><i data-feather="lock"></i></span>
 							<input type="password" class="form-control" placeholder="Password">
 						</div>
-						<div class="form-group text-start mt-2">
+						<div class="form-group text-left mt-2">
 							<div class="form-check">
 								<input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
 								<label class="form-check-label" for="flexCheckChecked">
@@ -48,10 +48,10 @@
 <!-- [ auth-signup ] end -->
 
 <!-- Required Js -->
-<script src="assets/js/vendor-all.js"></script>
+<script src="assets/js/vendor-all.min.js"></script>
 <script src="assets/js/plugins/bootstrap.min.js"></script>
 <script src="assets/js/plugins/feather.min.js"></script>
-<script src="assets/js/pcoded.js"></script>
+<script src="assets/js/pcoded.min.js"></script>
 @@include('./layouts/footer-bottom-link.html')
 
 </body>
