--- a/src/html/bc_typography.html
+++ b/src/html/bc_typography.html
@@ -197,9 +197,9 @@
 							<footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
 						</blockquote>
 						<p class="text-muted m-b-15 m-t-20">
-							Add <code>.text-end</code> for a blockquote with right-aligned content.
+							Add <code>.text-right</code> for a blockquote with right-aligned content.
 						</p>
-						<blockquote class="blockquote text-end">
+						<blockquote class="blockquote text-right">
 							<p class="mb-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
 							<footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
 						</blockquote>
