--- a/src/html/index.html
+++ b/src/html/index.html
@@ -216,7 +216,7 @@
                                                 <div><label class="badge bg-light-warning">Pending</label></div>
                                             </td>
                                             <td>$10</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16  text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16  text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>Iphone 6</td>
@@ -225,7 +225,7 @@
                                                 <div><label class="badge bg-light-danger">Cancel</label></div>
                                             </td>
                                             <td>$20</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16  text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16  text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>Jacket</td>
@@ -234,7 +234,7 @@
                                                 <div><label class="badge bg-light-success">Success</label></div>
                                             </td>
                                             <td>$35</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>Sofa</td>
@@ -243,7 +243,7 @@
                                                 <div><label class="badge bg-light-danger">Cancel</label></div>
                                             </td>
                                             <td>$85</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>Iphone 6</td>
@@ -252,7 +252,7 @@
                                                 <div><label class="badge bg-light-success">Success</label></div>
                                             </td>
                                             <td>$20</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>HeadPhone</td>
@@ -261,7 +261,7 @@
                                                 <div><label class="badge bg-light-warning">Pending</label></div>
                                             </td>
                                             <td>$50</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                         <tr>
                                             <td>Iphone 6</td>
@@ -270,7 +270,7 @@
                                                 <div><label class="badge bg-light-danger">Cancel</label></div>
                                             </td>
                                             <td>$30</td>
-                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ms-3 f-16 text-danger"></i></a></td>
+                                            <td><a href="#!"><i class="icon feather icon-edit f-16 text-success"></i></a><a href="#!"><i class="feather icon-trash-2 ml-3 f-16 text-danger"></i></a></td>
                                         </tr>
                                     </tbody>
                                 </table>
@@ -354,7 +354,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 3 pending tasks. <span class="text-muted float-end f-14">Just Now</span></h6>
+                                        <h6 class="m-b-5">You have 3 pending tasks. <span class="text-muted float-right f-14">Just Now</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -364,7 +364,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">New order received <span class="text-muted float-end f-14">30 min ago</span></h6>
+                                        <h6 class="m-b-5">New order received <span class="text-muted float-right f-14">30 min ago</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -374,7 +374,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 3 pending tasks. <span class="text-muted float-end f-14">Just Now</span></h6>
+                                        <h6 class="m-b-5">You have 3 pending tasks. <span class="text-muted float-right f-14">Just Now</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -384,7 +384,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 4 tasks Done. <span class="text-muted float-end f-14">1 hours ago</span></h6>
+                                        <h6 class="m-b-5">You have 4 tasks Done. <span class="text-muted float-right f-14">1 hours ago</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -394,7 +394,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 2 pending tasks. <span class="text-muted float-end f-14">Just Now</span></h6>
+                                        <h6 class="m-b-5">You have 2 pending tasks. <span class="text-muted float-right f-14">Just Now</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -404,7 +404,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">New order received <span class="text-muted float-end f-14">4 hours ago</span></h6>
+                                        <h6 class="m-b-5">New order received <span class="text-muted float-right f-14">4 hours ago</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -414,7 +414,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">New order Done <span class="text-muted float-end f-14">Just Now</span></h6>
+                                        <h6 class="m-b-5">New order Done <span class="text-muted float-right f-14">Just Now</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -424,7 +424,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 5 pending tasks. <span class="text-muted float-end f-14">5 hours ago</span></h6>
+                                        <h6 class="m-b-5">You have 5 pending tasks. <span class="text-muted float-right f-14">5 hours ago</span></h6>
                                     </a>
                                 </div>
                             </div>
@@ -434,7 +434,7 @@
                                 </div>
                                 <div class="col">
                                     <a href="#!">
-                                        <h6 class="m-b-5">You have 4 tasks Done. <span class="text-muted float-end f-14">2 hours ago</span></h6>
+                                        <h6 class="m-b-5">You have 4 tasks Done. <span class="text-muted float-right f-14">2 hours ago</span></h6>
                                     </a>
                                 </div>
                             </div>
